removed margins to prevent cards swaying to one side on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,9 +151,7 @@ cursor: pointer;
 .card {
 border: 1px solid #ffffff;
 width: 100%;
-margin-right: 4px;
 margin-top: 15px;
-margin-left: 2px;
 height: auto;
 }
 
